# stash-extract-db

./: .env.example  .gitignore  CLAUDE.md  ChatGPT_Scoring_Problem.md  Dockerfile  HOW_TO_USE.md  MULTI_CHANNEL_SCORING.md  README.md  docker-compose.yml  pyproject.toml  requirements.md
bridge/app/: main.py  models.py  settings.py
bridge/app/api/: featurization.py  health.py  match.py
bridge/app/cache/: db.py  invalidation.py
bridge/app/extractor/: client.py  schema_match.py
bridge/app/matching/: embedding.py  featurization.py  filename.py  image_match.py  scoring.py  scrape.py  search.py  text.py  worker.py
bridge/app/matching/imgmatch/: channels.py  image_comparison.py  sprite_processor.py
bridge/app/stash/: alias_index.py  client.py
docs/: HOW_TO_USE.md  SEMANTIC_MIGRATION_PLAN.md  TESTING.md
docs/calibration/: CALIBRATION_RESULTS.md  README.md
stash/: config.py  requirements.txt  scraper.py  stash-extract-db.yml
stash-extract-scraper/: config.py  scraper.py  stash-extract-scraper.yml
tests/: conftest.py
tests/calibration/: gen_dataset.py  import_to_stash.py  mock_extractor.py  sources.py
tests/integration/: test_calibration.py
tests/unit/: test_channels.py  test_db.py  test_dual_write.py  test_embedding.py  test_lifecycle.py  test_phase4_scoring_path.py  test_phase5_multichannel.py  test_scoring.py
